tests/invalid/generated_binop_mod_bytearray_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytearray = bytearray(b"hello")
    y: bool = True
    z = x % y
